src/tests/fixtures/input_types/InputTypeReturnedFromField.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  hello: string;
}

/** @gqlType */
class MyType {
  /** @gqlField */
  someField(): MyInputType;
}

/** @gqlInput */
type MyInputType = {
  someField: MyType;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_types/InputTypeReturnedFromField.invalid.ts:10:16 - error: The type of MyType.someField must be Output Type but got: MyInputType.

10   someField(): MyInputType;
                  ~
src/tests/fixtures/input_types/InputTypeReturnedFromField.invalid.ts:15:14 - error: The type of MyInputType.someField must be Input Type but got: MyType!.

15   someField: MyType;
                ~
